*Update versions of libraries